<resources>
    <string name="app_name">YoutubeClone</string>
    <string name="try_again">Try again</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="video_series">%s video series</string>
    <string name="back">Back</string>
    <string name="playlist">Playlist</string>
    <string name="title">Title</string>
    <string name="desc">Desc</string>
    <string name="count">count</string>
</resources>